<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_choose_themes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/themes_choose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t1"/>

        <Button
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t2"/>

        <Button
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t3"/>

        <Button
            android:id="@+id/t4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t4"/>

        <Button
            android:id="@+id/t5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t5"/>

        <Button
            android:id="@+id/t6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t6"/>

        <Button
            android:id="@+id/t7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t7"/>

        <Button
            android:id="@+id/t8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t8"/>

        <Button
            android:id="@+id/t9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t9"/>

        <Button
            android:id="@+id/t10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t10"/>

        <Button
            android:id="@+id/t11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t11"/>



    </LinearLayout>

</LinearLayout>